# log-analyzer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run.sh  test_runner
.github/workflows/: cd.yml  ci.yml
cli/: CMakeLists.txt  main.cpp  reporter.h
core/: CMakeLists.txt  analyzer.cpp  analyzer.h  common.h  core.h  parser.cpp  parser.h  reader.cpp  reader.h  reporter.cpp  reporter.h  statistics.cpp  statistics.h
gui/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h  main_window.ui  menu_window.cpp  menu_window.h  menu_window.ui
tests/: CMakeLists.txt  test_analyzer.cpp  test_parser.cpp  test_reader.cpp  test_reporter.cpp  test_statistics.cpp  tests.h
tests/test_data/: test_simple.txt  test_single_line.txt
